--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -21,10 +21,10 @@
 	<!-- let anyone log in as anyone (turn on in ~/.super.conf for debugging) -->
 	<parameter name="disableAuthentication">false</parameter>
 
-	<!-- Comma-separated list of features to enter debugging/testing mode; current allowed values:
+	<!-- Comma-separated list of features to enable; current allowed values:
                pollingTask
           -->
-	<parameter name="debugFeatures"></parameter>
+	<parameter name="serverFeatures"></parameter>
 
 	<!-- Never send out any email -->
 	<parameter name="disableEmail">false</parameter>
