--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -18,7 +18,7 @@
 	<property name="jboss.root" value="/opt/jboss" />
 	<property name="buildjar.dir" location="${target}/classes" />
 	<!-- *** stuff in bundled-classpath.external has to be added to application.xml also *** -->
-	<property name="bundled-classpath.external" value="smack-svn-local-build-2005-09-30.jar smackx-svn-local-build-2005-09-30.jar commons-fileupload-1.1.1.jar commons-io-1.2.jar slf4j-*.jar rome-*.jar mediarss-*.jar jdom-1.0.jar taste.jar tagsoup-1.0.jar ICOReader-1.04.jar"/>
+	<property name="bundled-classpath.external" value="smack-svn-local-build-2005-09-30.jar smackx-svn-local-build-2005-09-30.jar commons-fileupload-1.1.1.jar commons-io-1.2.jar slf4j-*.jar rome-*.jar jdom-1.0.jar mediarss.jar taste.jar tagsoup-1.0.jar ICOReader-1.04.jar"/>
 	<property name="bundled-classpath" value="dumbhippo-base.jar"/>	
 	<property name="bundled-deps.web" value="standard.jar" />
 	<property name="bundled-deps.client" value="" />
@@ -43,6 +43,7 @@
 		<pathelement location="${jboss.root}/server/default/deploy/jbossweb-tomcat55.sar/tomcat-util.jar"/>
 	 	<fileset refid="dumbhippo.global.jboss.jars"/>
                 <pathelement location="${dumbhippo.global.trunkdir}/taste/taste.jar"/>
+                <pathelement location="${dumbhippo.global.trunkdir}/mediarss/target/classes/mediarss.jar"/>
 	</path>
 
 	<path id="tests.class.path">
@@ -249,6 +250,7 @@
 		</copy>
 		<copy todir="${build.deploy.ear}">
 			<fileset dir="${dumbhippo.global.trunkdir}/taste" includes="taste.jar"/>
+			<fileset dir="${dumbhippo.global.trunkdir}/mediarss/target/classes" includes="mediarss.jar"/>
 		</copy>
 		<mkdir dir="${build.deploy.ear}/META-INF"/>
 		<copy file="dd/jboss-app.xml" todir="${build.deploy.ear}/META-INF"/>
