--- a/dumbhippo/trunk/client/windows/dependencies/dependencies.vcproj
+++ b/dumbhippo/trunk/client/windows/dependencies/dependencies.vcproj
@@ -19,7 +19,7 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake OUTDIR=..\Debug all"
 				ReBuildCommandLine="nmake OUTDIR=..\Debug clean all"
-				CleanCommandLine="nmake OUTDIR=..\Debug all"/>
+				CleanCommandLine="nmake OUTDIR=..\Debug clean"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
