add com.dumbhippo.email.MessageContent class as a way to share code for formatting emails. rearrange the invite email code to use this.

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -134,6 +134,7 @@
 				<include name="**/services/*.class" />
 				<include name="**/services/caches/*.class" />
 				<include name="**/dav/*.class" />
+				<include name="**/email/*.class" />
 				<include name="**/storage/*.class" />
 				<include name="**/search/*.class" />
 				<include name="**/server/**/*.class" />
