--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -174,6 +174,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-block-flickr-photoset.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-facebook-event.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-facebook-event.h	\
+	$(COMMONSRCDIR)/hippo/hippo-block-music-chat.c		\
+	$(COMMONSRCDIR)/hippo/hippo-block-music-chat.h		\
 	$(COMMONSRCDIR)/hippo/hippo-block-music-person.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-music-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-myspace-person.c	\
@@ -198,6 +200,10 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-chat.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-member.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-member.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-chat.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-chat.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-person.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-myspace-person.c	\
