ChatMessageView: pass the sentiment over XMPP MusicChatView: Fix the referenced objects return Makefile-mugshot.am quiplove_icon.png quithate_icon.png: Add   the quip icons. hippo-basics.[ch]: Add a sentiment enum and to/from string. hippo-chat-room.[ch] hippo-connection.c: Parse the sentiment from XMPP hippo-canvas-message-preview.c: Replace the chat icon with love/hate as   appropriate.

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -73,10 +73,12 @@ EMBEDDED_IMAGES=				\
 	$(EMBEDDEDIMAGEDIR)/hush2.png		\
 	$(EMBEDDEDIMAGEDIR)/hush.png		\
 	$(EMBEDDEDIMAGEDIR)/lid.png		\
-	$(EMBEDDEDIMAGEDIR)/lock_icon.png		\
+	$(EMBEDDEDIMAGEDIR)/lock_icon.png	\
 	$(EMBEDDEDIMAGEDIR)/mugshotstacker.png	\
 	$(EMBEDDEDIMAGEDIR)/nophoto.png		\
 	$(EMBEDDEDIMAGEDIR)/photo_icon.png	\
+	$(EMBEDDEDIMAGEDIR)/quiphate_icon.png	\
+	$(EMBEDDEDIMAGEDIR)/quiplove_icon.png	\
 	$(EMBEDDEDIMAGEDIR)/search_x.png	\
 	$(EMBEDDEDIMAGEDIR)/unhush2.png		\
 	$(EMBEDDEDIMAGEDIR)/unhush.png
