TrackView.java: Send thumbnail information to the client hippo-track.[ch]: Parse thumbnail information hippo-canvas-block.c: Expose the right column so subclasses  can pack stuff in it. Some variable renaming for clarity. hippo-actions.[ch]: Add music thumbnail async image fetching hippo-canvas-block-music.[ch]: Start reformatting to the  new vision; add thumbnail, (non-working) quip links, move  stuff around.

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -75,6 +75,7 @@ EMBEDDED_IMAGES=				\
 	$(EMBEDDEDIMAGEDIR)/lid.png		\
 	$(EMBEDDEDIMAGEDIR)/lock_icon.png	\
 	$(EMBEDDEDIMAGEDIR)/mugshotstacker.png	\
+	$(EMBEDDEDIMAGEDIR)/noart.png		\
 	$(EMBEDDEDIMAGEDIR)/nophoto.png		\
 	$(EMBEDDEDIMAGEDIR)/photo_icon.png	\
 	$(EMBEDDEDIMAGEDIR)/quiphate_icon.png	\
