hippo-track.[ch]: Add hippo_track_get_last_listen_time(),   hippo_track_get_display_title() hippo-canvas-chat-preview.c: Hide the chat link if the chat   isn't set. hippo-canvas-block-music.[ch]: Add track history display. hippo-canvas-timestamp.[ch] Makefile-libhippo.am:   Self updating timestamp item.

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -226,6 +226,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-thumbnails.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-thumbnails.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-timestamp.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-timestamp.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-image.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-image.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.c		\
