Add skeletal popup quip window. Still needs:  - Way of getting text from a HippoCanvasEntry  - Working memory management for HippoWindow  - Way of getting the mouse cursor to position by  - Basic keypress handling for return => send, esc => cancel  - Lost-focus detection so user can click off elsewhere  - Visual design

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -266,6 +266,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-person.h			\
 	$(COMMONSRCDIR)/hippo/hippo-platform.c			\
 	$(COMMONSRCDIR)/hippo/hippo-platform.h			\
+	$(COMMONSRCDIR)/hippo/hippo-quip-window.c		\
+	$(COMMONSRCDIR)/hippo/hippo-quip-window.h		\
 	$(COMMONSRCDIR)/hippo/hippo-post.c			\
 	$(COMMONSRCDIR)/hippo/hippo-post.h			\
 	$(COMMONSRCDIR)/hippo/hippo-resource.c			\
