More of the Applets => Images move

--- a/dumbhippo/trunk/client/windows/Images/Images.vcproj
+++ b/dumbhippo/trunk/client/windows/Images/Images.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="Applets"
+	Name="Images"
 	ProjectGUID="{A0F265E0-4510-4178-B365-A4581C74EA51}"
 	Keyword="MakeFileProj">
 	<Platforms>
