--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -50,6 +50,8 @@ mugshot_SOURCES	=				\
 	src/hippo-status-icon.h			\
 	src/hippo-window-gtk.c			\
 	src/hippo-window-gtk.h			\
+	src/hippo-window-wrapper.c		\
+	src/hippo-window-wrapper.h		\
 	src/main.c				\
 	src/main.h
 
