hippo-quip-window.c: Fix the border color of the toplevel HippoCanvasWidgets.cpp HippoEdit.cpp/h: Implement HippoCanvasEntry for windows HippoPlatformImpl.cpp: Implement get_pointer_position HippoScrollbar.cpp: Make create() more idempotent to prevent issues if someone   cuts-and-pastes and adds stuff. HippoWindowWin.cpp: app-window => role property change. Fix a bug when present()   was called without calling show() first.

--- a/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
@@ -150,6 +150,9 @@
 				RelativePath=".\HippoChatWindow.cpp">
 			</File>
 			<File
+				RelativePath=".\HippoEdit.cpp">
+			</File>
+			<File
 				RelativePath=".\HippoExternalBrowser.cpp">
 			</File>
 			<File
@@ -264,6 +267,9 @@
 			</File>
 			<File
 				RelativePath=".\HippoChatWindow.h">
+			</File>
+			<File
+				RelativePath=".\HippoEdit.h">
 			</File>
 			<File
 				RelativePath=".\HippoExternalBrowser.h">
