hippo-quip-window.c flat_x.png Makefile-mugshot.am: Match new quip window mockup. hippo-quip-window.c hippo-canvas-block-music.c: Use HIPPO_CANVAS_IMAGE_BUTTON  rather than hacked HIPPO_CANVAS_IMAGE for clickable images. hippo-canvas-widgets.c: Implement HippoCanvasButton for linux.

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -70,6 +70,7 @@ EMBEDDED_IMAGES=				\
 	$(EMBEDDEDIMAGEDIR)/closetip.png	\
 	$(EMBEDDEDIMAGEDIR)/expandtip.png	\
 	$(EMBEDDEDIMAGEDIR)/find.png		\
+	$(EMBEDDEDIMAGEDIR)/flat_x.png		\
 	$(EMBEDDEDIMAGEDIR)/home2.png		\
 	$(EMBEDDEDIMAGEDIR)/home.png		\
 	$(EMBEDDEDIMAGEDIR)/hush2.png		\
