--- a/dumbhippo/trunk/client/windows/HippoIpc/HippoIpc.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoIpc/HippoIpc.vcproj
@@ -36,7 +36,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/HippoIpc.lib"/>
+				OutputFile="$(OutDir)/HippoIpc.lib"
+				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
