--- a/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../HippoUtil;../../common/hippoipc;../HippoIpc"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;NOMINMAX;HIPPO_UTIL_STATIC"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;NOMINMAX"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
