Make hippo-ipc.h handling consistent between Windows and Linux (part of #1132, Mikkel Kamstrup Erlandsen)

--- a/dumbhippo/trunk/client/linux/Makefile-libhippofirefox.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippofirefox.am
@@ -46,6 +46,7 @@ libhippofirefox_la_CPPFLAGS =			\
 	$(AM_CPPFLAGS)				\
 	$(LIBHIPPOFIREFOX_CFLAGS)		\
 	-I $(FIREFOX_SRCDIR)/include		\
+	-I $(COMMONSRCDIR)/hippoipc		\
 	-I config/hippo
 
 # The include of $(GECKO_INCLUDEDIR) in the FULL_GECKO case is for 
