--- a/dumbhippo/trunk/client/linux/Makefile-test-hippo-ipc.am
+++ b/dumbhippo/trunk/client/linux/Makefile-test-hippo-ipc.am
@@ -2,6 +2,7 @@ noinst_PROGRAMS += test-hippo-ipc
 
 test_hippo_ipc_CPPFLAGS =		\
 	$(AM_CPPFLAGS)			\
+	-I $(COMMONSRCDIR)/hippoipc	\
 	$(TEST_HIPPO_IPC_CFLAGS)
 
 test_hippo_ipc_LDFLAGS=$(TEST_HIPPO_IPC_LIBS)
