--- a/dumbhippo/trunk/client/linux/configure.ac
+++ b/dumbhippo/trunk/client/linux/configure.ac
@@ -476,7 +476,14 @@ AC_SUBST(XPIDL)
 if $sdk_includes_nspr ; then
     NSPR_LIBS="-L $with_gecko_sdk/lib -lnspr4"
 else
-    NSPR_PACKAGES=nspr
+    for pkg in firefox-nspr nspr ; do
+        if test "x$NSPR_PACKAGES" = x ; then
+	    PKG_CHECK_EXISTS($pkg, NSPR_PACKAGES=$pkg)
+	fi
+    done
+    if test "x$NSPR_PACKAGES" = x ; then
+	AC_MSG_ERROR([Can't find nspr])
+    fi
 fi
 
 PKG_CHECK_MODULES(LIBHIPPOFIREFOX, gobject-2.0 dbus-1 >= $DBUS_REQUIRED dbus-glib-1 >= $DBUS_REQUIRED $NSPR_PACKAGES)
